--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "Attendance"
+    url: /Attendance/
+  - title: "Files"
+    url: /files/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
