--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Files"
     url: /files/
   - title: "Anchor"
-    url: \#test
+    url: '#test'
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
